--- a/package.json
+++ b/package.json
@@ -42,8 +42,12 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "^2.0.0",
     "protractor": "~7.0.0",
+    "standard": "17.0.0",
     "ts-node": "~10.9.1",
     "tslint": "~6.1.3",
-    "typescript": "~4.8.4"
+    "typescript": "4.7.2"
+  },
+  "eslintConfig": {
+    "extends": "./node_modules/standard/eslintrc.json"
   }
 }
